tests/neg/floatlits.scala
object Test {

  val y = .2 // ok

  val z = 3.2 // ok

  val a = 1.0e2
  val b = 1e-3

  val x = 2.
}  // error: identifier expected
